syntax = "proto3";

option go_package = "github.com/IrentyM/store/apis/gen/content-service/service/frontend/v1;statisticssvc";

package statistics.service.frontend.v1;

import "google/protobuf/timestamp.proto";

service StatisticsService {
    rpc GetUserOrdersStatistics(UserOrderStatisticsRequest) returns (UserOrderStatisticsResponse);
    rpc GetUserStatistics(UserStatisticsRequest) returns (UserStatisticsResponse);
  }
  
  message UserOrderStatisticsRequest {
    int64 user_id = 1;
  }
  
  message UserOrderStatisticsResponse {
    int32 total_orders = 1;
    map<string, int32> hourly_distribution = 2;
  }
  
  message UserStatisticsRequest {
    int64 user_id = 1;
  }
  
  message UserStatisticsResponse {
    int32 total_items_purchased = 1;
    double average_order_value = 2;
    string most_purchased_item = 3;
    int32 total_completed_orders = 4;
  }
  
  message OrderEvent {
    int64 event_id = 1;
    string operation = 2;  
    int64 order_id = 3;
    int64 user_id = 4;
    repeated OrderItem items = 5;
    double total = 6;
    string status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
  }
  
  message OrderItem {
    int64 product_id = 1;
    int32 quantity = 2;
    double price = 3;
  }
  
  message InventoryEvent {
    int64 event_id = 1;
    string operation = 2;  
    int64 product_id = 3;
    int32 stock = 4;
    double price = 5;
    google.protobuf.Timestamp updated_at = 6;
  }